# CMiner

./: CMakeLists.txt  README.md
Miner/: CMinerBase.cpp  CMinerBase.h
